fix(dark): fix dark mode

--- a/styles/sign-up.module.css
+++ b/styles/sign-up.module.css
@@ -115,6 +115,10 @@
   margin-top: 10px;
 }
 
+.darkColor {
+  color: #000;
+}
+
 .note {
   margin-top: 20px;
 }
